feat: update task info
