# api/task.go
@@ -5,6 +5,7 @@ import (
 	"github.com/ismdeep/alchemy-furnace/handler"
 	"github.com/ismdeep/alchemy-furnace/request"
 	"github.com/ismdeep/alchemy-furnace/util"
+	"github.com/ismdeep/parser"
 )
 
 // TaskList get task list
@@ -36,6 +37,31 @@ func TaskCreate(c *gin.Context) {
 	}
 
 	if _, err := handler.Task.Create(c.GetUint("user_id"), req); err != nil {
+		Fail(c, err.Error())
+		return
+	}
+
+	Success(c, "", nil)
+}
+
+// TaskUpdate update a task
+// @Summary updates a task
+// @Author l.jiang.1024@gmail.com
+// @Description update a task
+// @Tags Task
+// @Param Authorization	header	string true "Bearer 31a165ba1be6dec616b1f8f3207b4273"
+// @Param req body	request.Task true "JSON数据"
+// @Router /api/v1/tasks/:task_id [put]
+func TaskUpdate(c *gin.Context) {
+	req := &request.Task{}
+	err1 := c.BindJSON(req)
+	taskID, err2 := parser.ToUint(c.Param("task_id"))
+	if err := util.FirstError(err1, err2); err != nil {
+		Fail(c, err.Error())
+		return
+	}
+
+	if err := handler.Task.Update(taskID, req); err != nil {
 		Fail(c, err.Error())
 		return
 	}
