# docs/swagger.json
@@ -4,6 +4,26 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/sign-in": {
+            "post": {
+                "description": "user login",
+                "tags": [
+                    "User"
+                ],
+                "summary": "user login",
+                "responses": {}
+            }
+        },
+        "/api/v1/sign-up": {
+            "post": {
+                "description": "user register",
+                "tags": [
+                    "User"
+                ],
+                "summary": "user register",
+                "responses": {}
+            }
+        },
         "/api/v1/tasks": {
             "get": {
                 "description": "get task list",
@@ -22,6 +42,60 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "create a task",
+                "tags": [
+                    "Task"
+                ],
+                "summary": "creates a task",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 31a165ba1be6dec616b1f8f3207b4273",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "JSON数据",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.Task"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/tasks/:task_id": {
+            "put": {
+                "description": "update a task",
+                "tags": [
+                    "Task"
+                ],
+                "summary": "updates a task",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 31a165ba1be6dec616b1f8f3207b4273",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "JSON数据",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.Task"
+                        }
+                    }
+                ],
+                "responses": {}
             }
         },
         "/api/v1/tasks/:task_id/runs": {
@@ -31,6 +105,14 @@
                     "Task"
                 ],
                 "summary": "get task run list",
+                "responses": {}
+            },
+            "post": {
+                "description": "create a run for task",
+                "tags": [
+                    "Task"
+                ],
+                "summary": "creates a run for task",
                 "responses": {}
             }
         },
@@ -70,6 +152,26 @@
                 }
             }
         },
+        "request.Task": {
+            "type": "object",
+            "properties": {
+                "bash_content": {
+                    "type": "string"
+                },
+                "cron": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "run_on": {
+                    "type": "string"
+                }
+            }
+        },
         "response.Run": {
             "type": "object",
             "properties": {
@@ -103,7 +205,7 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
